# HiD-VAE

./: .gitignore  README.md  main.py  pyproject.toml  train_decoder.py  train_decoder_raw.py  train_h_rqvae.py  train_hidvae.py  train_rqvae.py  train_transformer.py
configs/: decoder_amazon.gin  decoder_kuairand.gin  h_rqvae_amazon.gin  h_rqvae_kuairand.gin  rqvae_amazon.gin  rqvae_kuairand.gin
data/: amazon.py  bge_zh_embedding.py  chat_with_llm.py  fill_kuairand.py  fill_kuairand_simple.py  kuairand_beauty_format.py  load_kuairand.py  preprocessing.py  processed.py  schemas.py  tags_amazon.py  tags_kuairand.py  tags_preprocessing.py  tags_processed.py  utils.py
evaluate/: metrics.py  plot_tsne.py
modules/: h_rqvae.py  loss.py  model.py  quantize.py
modules/embedding/: id_embedder.py
modules/tokenizer/: h_semids.py  semids.py
modules/transformer/: attention.py
scripts/: run.txt  view_beauty_dataset.py  view_processed_dataset.py  view_train_hrqvae.py  view_train_rqvae.py
