[project]
name = "rq-vae-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "flagembedding>=1.3.5",
    "gin>=0.1.6",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "openai>=1.88.0",
    "polars>=1.30.0",
    "torch>=1.12.0",
    "torch-geometric>=2.6.1",
    "torchaudio>=0.12.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true





[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
